# crawl-bot

./: .gitignore  CMakeLists.txt  README.md  example.json  example1.json  example2.json  test_config.json
src/: config_parser.cpp  config_parser.h  http_client.cpp  http_client.h  main.cpp  models.h  robots_parser.cpp  robots_parser.h  url_utils.h  utils.h
tests/: test_config.cpp  test_robots.cpp  test_url.cpp
